fix grid image not showing up

--- a/styles/src/cover-gallery/imagery.less
+++ b/styles/src/cover-gallery/imagery.less
@@ -19,7 +19,7 @@
                   visibility @transition-duration-quick step-end,
                   z-index @transition-duration-quick step-end;
 
-      &[data-project="squarespace"]    .image-background { background-image: url('../projects/squarespace-cover-2.jpg'); }
+      &[data-project="squarespace"]    .image-background { background-image: url('../projects/squarespace-cover.jpg'); }
       &[data-project="apple"]          .image-background { background-image: url('../projects/apple-cover.jpg'); }
       &[data-project="bloomingdales"]  .image-background { background-image: url('../projects/bloomingdales-cover.jpg'); }
       &[data-project="morgan-stanley"] .image-background { background-image: url('../projects/morgan-stanley-cover.jpg'); }
